tests/functional/data/transpiler/common/errors/shared/does_not_take_arguments.err
does_not_take_arguments.cpp:3:9: error: [@shared] does not take arguments
    3 |         @shared(12) int shm[10];
      |         ^
